<resources>
    <string name="app_name"></string>
    <string name="hello_world">hello_world></string>
    <string name="choix_forme_client">Votre choix de forme </string>
    <string name="choix_forme_serveur">Le choix du serveur</string>
    <string name="choix_forme_programme">Le choix du programme</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="title_activity_nouveau_main">nouveau_main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TEAM PLFI</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
...
