...
            android:layout_marginLeft="20dp"
            android:layout_marginRight="170dp"
            android:layout_weight="1"
            android:text="@string/choix_forme_client" />

        <Button
            android:id="@+id/enigme_new_btn"
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:background="@drawable/new_pic"
            android:contentDescription="@string/start_new" />

        <Button
            android:id="@+id/training_check"
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:background="@drawable/check"
            android:contentDescription="@string/save" />

...
